--- a/README
+++ b/README
@@ -1,12 +1,22 @@
-[![MIT Licence](https://badges.frapsoft.com/os/mit/mit.png?v=102)](https://opensource.org/licenses/mit-license.php) 
-[![Open Source Love](https://badges.frapsoft.com/os/v1/open-source-150x25.png?v=102)](https://github.com/ellerbrock/open-source-badge/)  
 
-Hello, everyone. 
+[Case 1]:
+    - git pull
+    - git add [type_your_file]
+    - git commit -m '[type_your_content]'
+    - git push
 
-It's my traing for git.
+[Case 2]:
+    - git pull
+    - git branch
+    - git checkout branch [type_your_branch]
 
+[Case 3]:
+    - git pull
+    - git checkout branch [type_your_branch]
+    - git add
+    - git commit -m '[type_your_content]'
+    - git push
 
-We often use the following command line to manage the development of software, so that we can reuse these codes if you want.
 
 1) git init 
 2) git add
