[Update] README file.

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-[![MIT Licence](https://badges.frapsoft.com/os/mit/mit.png?v=102)](https://opensource.org/licenses/mit-license.php) 
+[[MIT Licence](https://badges.frapsoft.com/os/mit/mit.png?v=102)](https://opensource.org/licenses/mit-license.php)
 [![Open Source Love](https://badges.frapsoft.com/os/v1/open-source-150x25.png?v=102)](https://github.com/ellerbrock/open-source-badge/)  
 
 Hello, everyone. 
 
-It's my traing for git.
+It's my training for git.
 
 
 We often use the following command line to manage the development of software, so that we can reuse these codes if you want.
